welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	var ado:int=0
	
if (13<=a && a>=19) 
{ado=ado+1 
	if (13<=b && b>=19)
	{ado=ado+1 
		if (13<=c && c>=19)
		{ado=ado+1 
			if (13<=d && d>=19)
			{ado=ado+1; return ado} 
			else {return ado}
		}
		else  {return ado}
	}else{return ado}
}else{return ado}
}
